--- a/songbook.tex
+++ b/songbook.tex
@@ -186,6 +186,55 @@ nechte ho jít.
 
 \end{poem}
 
+\begin{poem}{Amerika}{Lucie}
+
+\settowidth{\versewidth}{v duši zbylo světlo z jedný holky,}
+
+Nandej mi do hlavy tvý brouky,\\*
+a Bůh nám seber beznaděj,\\*
+v duši zbylo světlo z jedný holky,\\*
+tak mi teď za to vynadej.
+
+Zima a promarněný touhy,\\*
+do vrásek stromů padá déšť,\\*
+Zbejvaj roky, asi ne moc dlouhý,\\*
+do vlasů mi zabroukej:
+
+pá pa pá pá\\*
+pá pá pá pá\\*
+pá pa pá pá oujeé\\*
+pá pá pá pá\\*
+pá pa pá pá oujeé
+
+Tvoje voči jenom žhavý tóny,\\*
+dotek slunce zapadá,\\*
+horkej vítr rozezní mý zvony,\\*
+do vlasů ti zabroukám:
+
+pá pa pá pá\\*
+pá pá pá pá\\*
+pá pa pá pá oujeé\\*
+pá pá pá pá\\*
+pá pa pá pá oujeé
+
+Na obloze křídla tažnejch ptáků,\\*
+tak už na svý bráchy zavolej.\\*
+Na tváře ti padaj slzy z mraků\\*
+a Bůh nám sebral beznaděj. 
+
+V duši zbylo světlo z jedný holky,\\*
+do vrásek stromů padá déšť,\\*
+poslední dny, hodiny a roky,\\*
+do vlasů ti zabroukám:
+
+pá pa pá pá\\*
+pá pá pá pá\\*
+pá pa pá pá oujeé\\*
+pá pá pá pá\\*
+pá pa pá pá oujeé
+
+\end{poem}
+
 \begin{poem}{Little Big Horn}{Greenhorns}
 
 \settowidth{\versewidth}{Tam, kde leží Little Big Horn, je indiánská zem,}
