insert Dej mi vic sve lasky

--- a/songbook.tex
+++ b/songbook.tex
@@ -235,6 +235,44 @@ pá pa pá pá oujeé
 
 \end{poem}
 
+\begin{poem}{Dej mi víc své lásky}{Olympic}
+
+\settowidth{\versewidth}{Vymyslel jsem spoustu nápadu, aúú,}
+
+Vymyslel jsem spoustu nápadu, aúú,\\*
+co podporujou hloupou náladu, aúú,\\*
+hodit klíče do kanálu,\\*
+sjet po zadku holou skálu,\\*
+v noci chodit strašit do hradu.
+
+Dám si dvoje housle pod bradu, aúú,\\*
+v bíle plachtě chodím pozadu, aúú,\\*
+úplně melancholicky,\\*
+s citem pro věc jako vždycky\\*
+vyrábím tu hradní záhadu, aúú.
+
+Má drahá, dej mi víc,\\*
+má drahá, dej mi víc,\\*
+má drahá, dej mi víc své lásky, aúú\\*
+Ja nechci skoro nic,\\*
+já nechci skoro nic,\\*
+já chci jen pohladit tvé vlásky, aúú
+
+Nejlepší z těch divnej nápadu, aúú,\\*
+mi dokonale zvednul náladu, aúú,\\*
+natrhám ti sedmikrásky,\\*
+tebe celou s tvými vlásky\\*
+zamknu si na sedm západů, aú.
+
+Má drahá, dej mi víc,\\*
+má drahá, dej mi víc,\\*
+má drahá, dej mi víc své lásky, aúú\\*
+Ja nechci skoro nic,\\*
+já nechci skoro nic,\\*
+já chci jen pohladit tvé vlásky, aúú
+
+\end{poem}
+
 \begin{poem}{Little Big Horn}{Greenhorns}
 
 \settowidth{\versewidth}{Tam, kde leží Little Big Horn, je indiánská zem,}
