insert Bananova stava

--- a/songbook.tex
+++ b/songbook.tex
@@ -235,6 +235,43 @@ pá pa pá pá oujeé
 
 \end{poem}
 
+\begin{poem}{Banánová šťáva}{Timudej}
+
+\settowidth{\versewidth}{A tak si jede ten děda po mostě s valachem a sudy má za sebou.}
+
+Tak jedu si po pauze, za sebou mám ty svý sudy,\\*
+někde to vyložím, povezu zas prázdný sudy.\\*
+Pojedu doleva, bohužel však nevím kudy\\*
+a nebo doprava, doufám, že to bude tudy.
+
+Olé olé olé olé a někdo tady je a kdo to asi je?\\*
+Olé olé olé policie!\\*
+Olé olé olé olé a někdo tady je a kdo to asi je?\\*
+Olé olé olé policie!
+
+A tak si jede ten děda po mostě s valachem a sudy má za sebou.\\*
+Až dojede na asfaltovou silnici, kde ho staví četník...
+
+Stát! Dopravní kontrola!\\*
+Slezte z toho kozlíku a copak máte v těch sudech vzadu?!\\*
+Tam mám banánovou šťávu, šťávu z banánů!\\*
+Jo tak banánovou šťávu?!\\*
+Tak to jsem teda ale ještě nikdy neslyšel! Takovou kravinu!\\*
+To chci ochutnat tu vaši banánovou šťávu!\\*
+To není problém, tady máte kalíšek a natočte si.\\*
+Fuj, to je hnusný! Jak to někdo může pít?!\\*
+To já nevím, to je šťáva z banánů! Banánová šťáva!!\\*
+Běžte zpátky na ten kozlík a jeďte už ať vás tady nevidím!\\*
+A budu počítat do čtyř! Jedna, dva, tři, čtyři!!\\*
+Hyjé Banáne!!!
+
+Olé olé olé olé a někdo tady je a kdo to asi je?\\*
+Olé olé olé policie!\\*
+Olé olé olé olé a někdo tady je a kdo to asi je?\\*
+Olé olé olé policie!
+
+\end{poem}
+
 \begin{poem}{Dej mi víc své lásky}{Olympic}
 
 \settowidth{\versewidth}{Vymyslel jsem spoustu nápadu, aúú,}
