--- a/songbook.tex
+++ b/songbook.tex
@@ -272,6 +272,72 @@ Olé olé olé policie!
 
 \end{poem}
 
+\begin{poem}{Malování}{Divokej Bill}
+
+\settowidth{\versewidth}{jen táta a máma jsou s náma,}
+
+Nesnaž se,\\*
+znáš se.\\*
+Řekni mi, co je jiný,\\*
+jak v kleci máš se\\*
+pro nevinný,\\*
+noci dlouhý\\*
+jsou plný touhy\\*
+a lásky nás dvou.
+
+Všechno hezký za sebou mám,\\*
+můžu si za to sám.\\*
+V hlavě hlavolam,\\*
+jen táta a máma\\*
+jsou s náma,\\*
+napořád s náma.
+
+To je to tvoje malování\\*
+vzdušnejch zámků,\\*
+malování\\*
+po zdech holejma rukama\\*
+tě nezachrání,\\*
+už máš na kahánku,\\*
+tě nezachrání,\\*
+už seš na zádech.
+
+Je to za náma,\\*
+ty čteš poslední stránku,\\*
+za náma,\\*
+na zádech,\\*
+za náma,\\*
+už máš na kahánku,\\*
+mezi náma,\\*
+mi taky došel dech.
+
+To je to tvoje malování\\*
+vzdušnejch zámků,\\*
+malování\\*
+po zdech holejma rukama,\\*
+tě nezachrání,\\*
+už máš na kahánku,\\*
+tě nezachrání,\\*
+už seš na zádech.
+
+Je to za náma,\\*
+ty čteš poslední stránku,\\*
+za náma,\\*
+na zádech,\\*
+za náma,\\*
+už máš na kahánku,\\*
+mezi náma,\\*
+mi taky došel dech.
+
+Znáš se.\\*
+Řekni mi, co je jiný,\\*
+jak v kleci máš se\\*
+pro nevinný,\\*
+noci dlouhý\\*
+jsou plný touhy\\*
+a lásky nás tří.
+
+\end{poem}
+
 \begin{poem}{Dej mi víc své lásky}{Olympic}
 
 \settowidth{\versewidth}{Vymyslel jsem spoustu nápadu, aúú,}
