insert Bella Ciao

--- a/songbook.tex
+++ b/songbook.tex
@@ -14,7 +14,7 @@
 
 \renewcommand{\pttitle}{Zpěvník}
 \renewcommand{\ptsubtitle}{hudop.cz}
-\renewcommand{\ptauthor}{Óňa}
+\renewcommand{\ptauthor}{}
 \renewcommand{\ptdate}{2017/07/30}
 \renewcommand{\ptdedication}{Made by HUDOP:\\*
 This is dedicated to\\*
@@ -2214,6 +2214,50 @@ One, two, three, four, five.
 Hunt the hare and turn her\\*
 Down the rocky road, and all the ways to Dublin\\*
 Whack fol-lol-de-ra.
+
+\end{poem}
+
+\section{Italské}
+Předmluva k italským songům. 
+
+\newpage
+\thispagestyle{empty}
+
+% \mainmatter
+
+\begin{poem}{Bella Ciao}{lidová}
+
+\settowidth{\versewidth}{O bella ciao, bella ciao, bella ciao ciao ciao}
+
+\incipit{Una mattina mi son svegliato}\\*
+O bella ciao, bella ciao, bella ciao ciao ciao\\*
+Una mattina mi son svegliato\\*
+Eo ho trovato l'invasor.
+
+O partigiano porta mi via\\*
+O bella ciao, bella ciao, bella ciao ciao ciao\\*
+O partigiano porta mi via\\*
+Che mi sento di morir.
+
+E se io muoio da partigiano\\*
+O bella ciao, bella ciao, bella ciao ciao ciao\\*
+E se io muoio da partigiano\\*
+Tu mi devi seppellir.
+
+Mi seppellire lassù in montagna\\*
+O bella ciao, bella ciao, bella ciao ciao ciao\\*
+Mi seppellire lassù in montagna\\*
+Sotto l'ombra di un bel fiore.
+
+E le genti che passeranno\\*
+O bella ciao, bella ciao, bella ciao ciao ciao\\*
+E le genti che passeranno\\*
+Mi diranno: "Che bel fior".
+
+È questo il fiore del partigiano\\*
+O bella ciao, bella ciao, bella ciao ciao ciao\\*
+È questo il fiore del partigiano\\*
+Morto per la libertà.
 
 \end{poem}
 
