--- a/songbook.tex
+++ b/songbook.tex
@@ -40,7 +40,34 @@ Someone else, not you.}
 \maketop
 
 \section{České}
-Předmluva k českým songům.
+
+Česko je vnitrozemský stát ležící ve střední Asii. Sousedí na západě
+s Německem, na východě není daleko do Ruska. Na mapách nenaleznete žádné moře,
+jen krev a mléko, uran, strdí a údajně i med. V 90. letech minulého století
+začaly plány na zatopení části Moravy tak, aby se sousední Slovensko stalo
+českou zámořskou kolonií. Kvůli Greenpeace k tomu však nedošlo (Moravistánští
+katolíci to přisuzují vlivu sv. Cyrila a Metoděje, jistá část populace zase
+Klementa Gottwalda).
+
+Již starověcí Egypťané, Číňané a Olmékové zmiňovali vzdálený cizí kraj, kde
+údajně poklidně žil kulturně vyspělý národ – národ Čechů. Čechové, původem
+Slované, zakládali knihovny a čas trávili studiem, aby pak večer měli o čem
+diskutovat v hospodě u piva. Bojovali neradi, raději trousili moudra při lidové
+zábavě, případně něco vyráběli či kutili. Po první návštěvě kupce Sáma se věci
+naučili i prodávat. Časem se naučili také prodej věcí, které se jim tak docela
+nepovedou. 
+
+Čeština je extrémně složitý jazyk, proto už Češi nemají kapacity na to, aby se
+naučili nějaký cizí jazyk. Je obecně známou skutečností, že největší šance měl
+při volbě nového Papeže kardinál Vlk, který ale nakonec neuspěl z jediného
+důvodu a to, že nikdo nedokázal vyslovit jeho jméno. Ve skutečnosti je v
+Čechistánu mnoho jazyků, ovšem jen čeština je úřední. 
+
+Hymna Česka je stará píseň původem z předminulého století. Její melodie i text
+pochází z veselohry, která se hrávala pro pobavení prostého lidu v divadlech na
+pražských předměstích. Její text, melodii, videoklip a další informace najdete
+na oficiálním kanálu YouTube. Autorem textu je Josef Šroub a hudbu složil Josef
+Kajetán Pterodaktyl. 
 
 \newpage
 \thispagestyle{empty}
@@ -1735,9 +1762,40 @@ tak kopni do tý bedny...
 %\renewcommand*{\topname}{Anglické} % Name for the table of songs
 %\maketop
 
-\section{Čobolácké}
-Předmluva k slovenským songům. Teda k slovenskému songu, protože víc jich
-nemají... 
+\section{Slovenské}
+
+Slovensko (anglicky Slotakia, maďarsky Kibaszott északi ország), dlouhý tvar
+Slovenská republika, někdy též Severní Maďarsko, je malinkatá země ve tvaru
+halušky, hraničící se Sovětským svazem. Žijí v ní (kromě Maďarů, Romů, Rusínů,
+Poláků, Čechů a Hejslováků) také Slováci jako nejvýznamnější národnostní
+menšina. 
+
+Vysvětlení pojmenování Slovák a Hejslovák pochází od hanlivého oslovení, které
+používali maďarští nájezdníci na porobené Slovany (Slovan $\rightarrow$ Slovák,
+srv. Rakušan $\rightarrow$ Rakušák, Sudeťan $\rightarrow$ Sudeťák) a zvolací
+částice Hej, kterou tito popoháněli své slovanské nevolníky do práce. 
+
+Dle vlastních citací jsou nejstarším civilizovaným národem Evropy, a možná
+i světa. Jsou prapředky všech známých starověkých civilizací, jako Etruskové,
+Řekové, Římané, Egypťané, Indové, Číňané, Komanči a Brňáci. 
+
+Hymna Nad Tatrou sa blýska svým meteorologickým zaměřením odkazuje na
+slotistický původ. Zpívá se v licenci od Tatry Kopřivnice, která ji složila
+jako reklamní popěvek oslavující dobré jízdní vlastnosti jejich vozů
+v nepříznivém počasí. Textaři bohužel rytmicky nevycházel závěr Hejslováci
+ožijú, a proto předponu Hej vynechal. 
+
+V dobách Československa Slováci původně vylobbovali, aby se jejich hymna hrála
+jako první, nicméně po protestech posluchačů ("tak přestaňte ladit a začněte
+konečně hrát!") ji zakomponovali jako codu písně Kde domov můj.
+
+Nejdůležitější fráze:
+\begin{itemize}
+	\item Mé vznášedlo je plné úhořů. – Moje vznášadlo je plné úhorov.
+    \item Příliš žluťoučký kůň úpěl ďábelské ódy. – Kŕdeľ šťastných ďatľov učí
+    pri ústí Váhu mĺkveho koňa obhrýzať kôru a žrať čerstvé mäso. 
+\end{itemize}
+    
 
 \newpage
 \thispagestyle{empty}
@@ -1794,7 +1852,36 @@ Lesbian's and Gay song.
 \end{poem}
 
 \section{Anglické}
-Předmluva k anglickým songům. 
+
+Anglie, anglicky England, je jedna z historických zemí Spojených emirátů Velké
+Británie a Severního Irska bez Skotska. Anglie přinesla pro lidstvo a světovou
+kulturu mnoho pozitivního: 
+\begin{itemize}
+	\item Anglická kuchyně: Je druhá nejhorší kuchyně na světě, po kuchyni kmene
+	Umburu v Papui
+	\item Anglický humor: Podivná věta, které se Angličani smějí a nikdo neví,
+	proč. 
+	\item Anglické pivo: Je druhé nejhorší pivo na světě, po americkém. Vyznačuje
+	se tím, že nemá žádnou pěnu. 
+	\item Anglický politik: Neville Chamberlain svět naučil, jak úspěšně vyjednat
+	Mnichovskou dohodu. 
+	\item Anglický opilec: "Nazdar, chceš se prát, že jo?" "Ne, nechci."
+	"Ale já myslím, že jo, takže tě musím praštit."
+	\item Anglický plnokrevník: Teplokrevné plemeno koní vzniklé v Anglii křížením
+	původních koní s Araby. 
+	\item Anglický polokrevník: Teplokrevné plemeno koní, má jen polovinu
+	vlastností a kvalit anglického plnokrevníka (tzv. dvounohý kůň).
+	\item Beatles: Angličtí Brouci z Liverpoolu byli ve své době ve světě stejně
+	populární, jako americký brouk v ČSSR. 
+\end{itemize}
+
+Důležitým uměleckým dílem, ve kterém se tato země zmiňuje, je film Svatba
+Jiřího Káry z roku 2000. Tento film pojednává o svatbě bezdomovců a opilců na
+jednom s pražských městských úřadů. V jedné pasáži hlavní postava filmu - Jiří
+Kára - říká doslova "Anglie, Anglie, Anglie!" a následuje mohutné krknutí.
+V době natočení šlo o jeden z prvních filmů zmiňující se o této zemi, a má za
+následek výrazný přínos informací o tomto státě, jeho kultuře, zvycích
+a historii českým občanům. 
 
 \newpage
 \thispagestyle{empty}
@@ -2218,7 +2305,39 @@ Whack fol-lol-de-ra.
 \end{poem}
 
 \section{Italské}
-Předmluva k italským songům. 
+
+Itálie je nevyspělou zemí divokých Italů. Nachází se v jižní Evropě a je
+obklopena ze všech stran mořem (kromě severu). Je tam dostatek slunce, vína,
+italské zmrzliny, italské mafie a velký nadbytek pláží. Proto se v italském
+parlamentu před několika lety uvažovalo o odprodeji několika italských pláží
+České republice (na žádost Jiřího Paroubka). Měly být přemístěny do jižních
+Čech. Tento obchod se však nakonec neuskutečnil protože se zjistilo, že by bylo
+nutno odprodat i kus Jadranského moře, a to si nárokuje též Chorvatsko. 
+
+Itálie ráda vstupuje a vystupuje z mezinárodních organizací, spolků,
+spojenectví. Dnes je v OSN, FIFA, EU, G7, G8, SPQR nebo NATO, účast v eurozóně
+zpochybnila a účast v Evropské unii také, což o 6 minut později vzala zpět.
+Patřila k Ose, později odešla. V letech 974 až 1456 součástí Svaté říše římské
+s výjimkou let 1022 až 1026 a 1170 až 1182 (v letech 1182 až 1186 tak napůl).
+V roce 1456 odešla, ještě dříve se vrátila a zůstala až do konce, když se díky
+Napoleonovi rozpadla. 
+
+Itálie se skládá z nohy, která nakopává Sicílii, což má svůj historický původ
+v římských dobách, kdy Římané válčili se Sicílií. Další ostrov, Sardinie, byl
+již Římany definitivně odkopnut. Dříve jim náležela též Libye, Itálie
+potřebovala pevnou půdu pod nohama, ale přišla o ni. 
+
+Itálie dala světu hudbu, bez níž se neobešla žádná normalizační estráda. A to
+přestože šlo povětšinou o obšlehlé verze českých autorů, jako byl Jaroslav
+Uhlíř, Těžkej Pokondr či Semtex. Samotná hudba se přitom vyznačuje kreativním
+minimalismem, kdy s minimem prostředků autoři vykouzlí hromady skladeb. Většina
+písní má harmonii na akordy C - Ami - Dmi - G a slova jsou plusmínus stejná.
+Písně se však dají dobře odlišit podle rytmu a přízvuku v refrénu
+(ámore / amóre / amoré).
+
+Italský minimalismus se projevuje i ve filmu. Jen tak si lze
+vysvětlit, že byli schopni vytvořit sérii úspěšných filmových
+komedií na základě toho, že jeden chlápek dá facku druhému. 
 
 \newpage
 \thispagestyle{empty}
