long refrains into Ref.

--- a/songbook.tex
+++ b/songbook.tex
@@ -21,6 +21,7 @@ This is dedicated to\\*
 Someone else, not you.}
 \renewcommand{\contentsname}{Osnova}
 
+\newcommand\tab[1][1cm]{\hspace*{#1}}
 
 \begin{document}
 
@@ -124,8 +125,6 @@ Jako nálada, když zahrajou poslední kus,\\*
 rudej byl v plamenech prej i mistr Jan Hus,\\*
 je to barva, kterou, mám prostě rád,\\*
 rudá je dobrá, vždyť je to Mars.
-
-
 
 \end{poem}
 
@@ -412,6 +411,7 @@ tam přijíždí generál Custer se svým praporem,\\*
 modrý kabáty jezdců, stíny dlouhejch karabin,\\*
 a z indiánskejch signálů po nebi letí dým.
 
+Ref.:\\*
 Říkal to Jim Bridger já měl jsem v noci sen,\\*
 pod sedmou kavalerií jak krví rudne zem,\\*
 kmen Siouxů je statečný a dobře svůj kraj zná,\\*
@@ -422,30 +422,21 @@ táhne generál Custer se svou kavalerií,\\*
 marně mu stopař Bridger radí: Zpátky povel dej!,\\*
 Jedinou možnost ještě máš, život si zachovej!
 
-Říkal to Jim Bridger já měl jsem v noci sen,\\*
-pod sedmou kavalerií jak krví rudne zem,\\*
-kmen Siouxů je statečný a dobře svůj kraj zná,\\*
-proč Custer neposlouchá ta slova varovná.
+Ref.
 
 Tam blízko Little Big Hornu se vznáší smrti stín,\\*
 padají jezdci z koní, výstřely z karabin,\\*
 límce modrejch kabátů barví krev červená,\\*
 kmen Siouxů je statečný a dobře svůj kraj zná.
 
-Říkal to Jim Bridger já měl jsem v noci sen,\\*
-pod sedmou kavalerií jak krví rudne zem,\\*
-kmen Siouxů je statečný a dobře svůj kraj zná,\\*
-proč Custer neposlouchá ta slova varovná.
+Ref.
 
 Pak všechno ztichlo a jen tamtam duní nad krajem,\\*
 v oblacích prachu mizí Siouxů vítězný kmen,\\*
 cáry vlajky hvězdnatý po kopcích vítr vál,\\*
 tam uprostřed svých vojáků leží i generál.
 
-Říkal to Jim Bridger já měl jsem v noci sen,\\*
-pod sedmou kavalerií jak krví rudne zem,\\*
-kmen Siouxů je statečný a dobře svůj kraj zná,\\*
-proč Custer neposlouchal ta slova varovná.
+Ref.
 
 \end{poem}
 
@@ -499,6 +490,7 @@ ozvěna šum kotle odráží,\\*
 až uslyšíš hvízdání,\\*
 to můj vlak vjede do nádraží.
 
+Ref.:\\*
 Jen mou rakev klidně\\*
 víkem zandavej,\\*
 Jen mou rakev klidně\\*
@@ -513,12 +505,7 @@ za pět minut má vyjet můj vlak,\\*
 kdo ho spustí ale vpřed,\\*
 když já musím tu ležet naznak?
 
-Jen mou rakev klidně\\*
-na vůz nandavej,\\*
-Jen mou rakev klidně\\*
-na vůz nandavej,\\*
-kdo však dál teď bude\\*
-řídit můj vlak hvízdavej?
+Ref.
 
 Dejte pryč ty věnce,\\*
 strhejte ten černej flór,\\*
@@ -538,6 +525,7 @@ který v drápech má ďábel sám.\\*
 Bílou přídí šalupa My Grave\\*
 míří k útesům, který znám.
 
+Ref.:\\*
 Jen tři kříže z bílýho kamení\\*
 někdo do písku poskládal.\\*
 Slzy v očích měl a v ruce znavený\\*
@@ -548,20 +536,14 @@ samý pití a rvačky jen,\\*
 chřestot nožů, při kterým přejde smích,\\*
 srdce kámen a jméno Sten.
 
-Jen tři kříže z bílýho kamení\\*
-někdo do písku poskládal.\\*
-Slzy v očích měl a v ruce znavený\\*
-lodní deník, co sám do něj psal.
+Ref.
 
 Já Bob Green mám tváře zjizvený,\\*
 štěkot psa zněl, když jsem se smál.\\*
 Druhej kříž mám a spím pod zemí,\\*
 že jsem falešný karty hrál.
 
-Jen tři kříže z bílýho kamení\\*
-někdo do písku poskládal.\\*
-Slzy v očích měl a v ruce znavený\\*
-lodní deník, co sám do něj psal.
+Ref.
 
 Třetí kříž snad vyvolá jen vztek,\\*
 Davy Rodgers těm dvoum život vzal\\*
@@ -569,10 +551,7 @@ Svědomí měl a vedle nich si klek:\\*
 "Vím, trestat je lidský,\\*
 ale odpouštět božský, snad mi tedy Bůh odpustí."
 
-Jen tři kříže z bílýho kamení\\*
-jsem jim do písku poskládal.\\*
-Slzy v očích měl a v ruce znavený\\*
-lodní deník a v něm, co jsem psal.
+Ref.
 
 \end{poem}
 
@@ -598,6 +577,7 @@ ten frajer libový\\*
 (johoho ten frajer libový)
 \end{altverse}
 
+Ref.:\\*
 Já jsem ostuda traperů\\*
 já mám rád operu\\*
 já mám rád jazz-rock\\*
@@ -629,18 +609,7 @@ akordy na Vlajku\\*
 (johoho akordy na Vlajku)
 \end{altverse}
 
-Já jsem ostuda traperů\\*
-já mám rád operu\\*
-já mám rád folk-rock\\*
-chodím po světě bez nože\\*
-to prý se nemože\\*
-to prý jsem cvok\\*
-já jsem nikdy neplul na šífu\\*
-a všem šerifům jsem říkal Ba ne\\*
-pane\\*
-já jsem ostuda trempů\\*
-já když chlempu\\*
-tak v autokempu
+Ref.
 
 \begin{altverse}
 A tak chodím po světě
@@ -660,19 +629,7 @@ a zase bude líp\\*
 (johoho a zase bude líp)
 \end{altverse}
 
-Já jsem ostuda traperů\\*
-já mám rád operu\\*
-já mám rád rock-rock\\*
-chodím po světě bez nože\\*
-to prý se nemože\\*
-to prý jsem cvok\\*
-já jsem nikdy neplul na šífu\\*
-a všem šerifům jsem říkal Ba ne\\*
-pane\\*
-já jsem ostuda trempů\\*
-já když chlempu\\*
-tak v autokempu\\*
-v tempu
+Ref.
 
 \end{poem}
 
@@ -682,45 +639,33 @@ v tempu
 
 Daleko na severu je Grónská zem,\\*
 žije tam Eskymačka s Eskymákem.\\*
-My bychom umrzli, jim není zima,\\*
-snídají nanuky a eskyma.\\*
-My bychom umrzli, jim není zima,\\*
-snídají nanuky a eskyma.
+/:My bychom umrzli, jim není zima,\\*
+snídají nanuky a eskyma.:/
 
 Mají se bezvadně, vyspí se moc,\\*
 půl roku trvá tam polární noc.\\*
-Na jaře vzbudí se a vyběhnou ven,\\*
-půl roku trvá tam polární den.\\*
-Na jaře vzbudí se a vyběhnou ven,\\*
-půl roku trvá tam polární den.
+/:Na jaře vzbudí se a vyběhnou ven,\\*
+půl roku trvá tam polární den.:/
 
 Když sněhu napadne nad kotníky,\\*
 hrávají s medvědy na četníky.\\*
-Medvědi těžko jsou k poražení,\\*
-neboť medvědy ve sněhu vidět není.\\*
-Medvědi těžko jsou k poražení,\\*
-neboť medvědy ve sněhu vidět není.
+/:Medvědi těžko jsou k poražení,\\*
+neboť medvědy ve sněhu vidět není.:/
 
 Pokaždé ve středu, přesně ve dvě\\*
 zaklepe na na íglů hlavní medvěd.\\*
-"Dobrý den, mohu dál na vteřinu?\\*
-Nesu vám trochu ryb na svačinu."\\*
-"Dobrý den, mohu dál na vteřinu?\\*
-Nesu vám trochu ryb na svačinu."
+/:"Dobrý den, mohu dál na vteřinu?\\*
+Nesu vám trochu ryb na svačinu.":/
 
 V kotlíku bublá čaj, kamna hřejí,\\*
 psi venku hlídají před zloději.\\*
-Smíchem se otřásá celé iglů,\\*
-neboť medvěd jim předvádí spoustu fíglů.\\*
-Smíchem se otřásá celé iglů,\\*
-neboť medvěd jim předvádí spoustu fíglů.
+/:Smíchem se otřásá celé iglů,\\*
+neboť medvěd jim předvádí spoustu fíglů.:/
 
 Tak žijou vesele na severu,\\*
 srandu si dělají z teploměrů.\\*
-My bychom umrzli, jim není zima,\\*
-neboť jsou doma a mezi svýma.\\*
-My bychom umrzli, jim není zima,\\*
-neboť jsou doma a mezi svýma.
+/:My bychom umrzli, jim není zima,\\*
+neboť jsou doma a mezi svýma.:/
 \end{poem}
 
 \begin{poem}{Hlídač krav}{Jaromír Nohavica}
@@ -950,59 +895,35 @@ Tichounce do pláče \\*
 
 \settowidth{\versewidth}{Běželi běželi bez uzdy a sedla}
 
-Já viděl divoké koně, \\*
-běželi soumrakem.\\*
-Já viděl divoké koně,\\*
-běželi soumrakem.\\*
-Vzduch těžký byl a divně voněl\\*
-tabákem.\\*
-Vzduch těžký byl a divně voněl\\*
-tabákem.
+/:Já viděl divoké koně, \\*
+běželi soumrakem.:/\\*
+/:Vzduch těžký byl a divně voněl\\*
+tabákem.:/
 
-Běželi běželi bez uzdy a sedla\\*
-krajinou řek a hor.\\*
-Běželi běželi bez uzdy a sedla\\*
-krajinou řek a hor.\\*
-Sper to čert jaká touha je to vedla\\*
-za obzor.\\*
-Sper to čert jaká touha je to vedla\\*
-za obzor.
+/:Běželi běželi bez uzdy a sedla\\*
+krajinou řek a hor.:/\\*
+/:Sper to čert jaká touha je to vedla\\*
+za obzor.:/
 
-Snad vesmír nad vesmírem, \\*
-snad lístek na věčnost.\\*
-Snad vesmír nad vesmírem, \\*
-snad lístek na věčnost.\\*
-Naše touho ještě neumírej,\\* 
-sil máme dost.\\*
-Naše touho ještě neumírej, \\*
-sil máme dost.
+/:Snad vesmír nad vesmírem, \\*
+snad lístek na věčnost.:/\\*
+/:Naše touho ještě neumírej, \\*
+sil máme dost.:/
 
-V nozdrách sládne zápach klisen \\*
-na břehu jezera.\\*
-V nozdrách sládne zápach klisen \\*
-na břehu jezera.\\*
-Milování je divoká píseň \\*
-večera.\\*
-Milování je divoká píseň \\*
-večera.
+/:V nozdrách sládne zápach klisen \\*
+na břehu jezera.:/\\*
+/:Milování je divoká píseň \\*
+večera.:/
 
-Stébla trávy sklání hlavu, \\*
-staví se do šiku.\\*
-Stébla trávy sklání hlavu, \\*
-staví se do šiku.\\*
-Král s dvořany přijíždí na popravu \\*
-zbojníků.\\*
-Král s dvořany přijíždí na popravu \\*
-zbojníků.
+/:Stébla trávy sklání hlavu, \\*
+staví se do šiku.:/\\*
+/:Král s dvořany přijíždí na popravu \\*
+zbojníků.:/
 
-Chtěl bych jak divoký kůň běžet běžet,\\* 
-nemyslet na návrat.\\*
-Chtěl bych jak divoký kůň běžet běžet, \\*
-nemyslet na návrat.\\*
-S koňskými handlíři vyrazit dveře, \\*
-to bych rád.\\*
-S koňskými handlíři vyrazit dveře, \\*
-to bych rád.
+/:Chtěl bych jak divoký kůň běžet běžet,\\* 
+nemyslet na návrat.:/\\*
+/:S koňskými handlíři vyrazit dveře, \\*
+to bych rád.:/
 
 \end{poem}
 
@@ -1015,6 +936,7 @@ V řadě za sebou tři čuníci jdou,\\*
 kufry nemají, cestu neznají,\\*
 vyšli prostě do světa a vesele si zpívají: 
 
+Ref.:\\*
 Ui ui ui ui uí\\*
 ui ui ui ui uí\\*
 ui ui ui ui uí uí\\*
@@ -1030,75 +952,35 @@ tři čuníci jdou, jdou rovnou za nosem,\\*
 ušima bimbají, žito křoupají,\\*
 vyšli prostě do světa a vesele si zpívají: 
 
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui uí uí\\*
-ui ui ui ui uí
-
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui ui ui ui ui\\*
-ui ui ui ui ui ui uí
+Ref.
 
 Levá, pravá - teď!, přední, zadní - už!,\\*
 tři čuníci jdou, jdou jako jeden muž,\\*
 lidé zírají, důvod neznají,\\*
 proč ti malí čuníci tak vesele si zpívají: 
 
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui uí uí\\*
-ui ui ui ui uí
-
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui ui ui ui ui\\*
-ui ui ui ui ui ui uí
+Ref.
 
 Když kopýtka pálí, když jim dojde dech,\\*
 sednou ke studánce na vysoký břeh,\\*
 ušima bimbají, kopýtka máchají,\\*
 chvilinku si odpočinou, a pak dál se vydají: 
 
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui uí uí\\*
-ui ui ui ui uí
-
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui ui ui ui ui\\*
-ui ui ui ui ui ui uí
+Ref.
 
 Když se spustí déšť, roztrhne se mrak,\\*
 k sobě přitisknou se čumák na čumák,\\*
 blesky bleskají, kapky pleskají,\\*
 oni v dešti, nepohodě vesele si zpívají: 
 
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui uí uí\\*
-ui ui ui ui uí
-
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui ui ui ui ui\\*
-ui ui ui ui ui ui uí
+Ref.
 
 Za tu spoustu let, co je světem svět,\\*
 přešli zeměkouli třikrát tam a zpět\\*
 v řadě za sebou, hele, támhle jdou,\\*
 pojďme s nima zazpívat si jejich píseň veselou: 
 
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui uí uí\\*
-ui ui ui ui uí
-
-Ui ui ui ui uí\\*
-ui ui ui ui uí\\*
-ui ui ui ui ui ui ui ui\\*
-ui ui ui ui ui ui uí
+Ref.
 
 \end{poem}
 
@@ -1157,139 +1039,53 @@ bohatě co blíží se ke svému pádu
 
 \settowidth{\versewidth}{Co jste to za vojsko,}
 
-\begin{altverse}
-Na malém plácku\\*
-Na malém plácku\\*
-děti si hrají,\\*
-děti si hrají,\\*
-hrají si na válku,\\*
-hrají si na válku,\\*
-všechno už mají.\\*
-všechno už mají.
-\end{altverse}
+/:Na malém plácku:/\\*
+/:děti si hrají,:/\\*
+/:hrají si na válku,:/\\*
+/:všechno už mají.:/
 
-\begin{altverse}
-Stejnokroj z tepláků\\*
-Stejnokroj z tepláků\\*
-větší než na míru,\\*
-větší než na míru,\\*
-dřevěný pistole,\\*
-dřevěný pistole,\\*
-čepice z papíru.\\*
-čepice z papíru.
-\end{altverse}
+/:Stejnokroj z tepláků:/\\*
+/:větší než na míru,:/\\*
+/:dřevěný pistole,:/\\*
+/:čepice z papíru.:/
 
-\begin{altverse}
-A bitva za bitvou,\\*
-A bitva za bitvou,\\*
-tak to jde dokola,\\*
-tak to jde dokola,\\*
-až potom najednou\\*
-až potom najednou\\*
-něčí hlas zavolá:\\*
-něčí hlas zavolá:
-\end{altverse}
+/:A bitva za bitvou,:/\\*
+/:tak to jde dokola,:/\\*
+/:až potom najednou:/\\*
+/:něčí hlas zavolá::/
 
-\vfill\eject
+Ref.:\\*
+/:Zastavte válku,:/\\*
+/:Maruška brečí,:/\\*
+/:dostala kamenem:/\\*
+/:při naší zteči.:/
 
-\begin{altverse}
-Zastavte válku\\*
-Zastavte válku\\*
-Maruška brečí,\\*
-Maruška brečí,\\*
-dostala kamenem\\*
-dostala kamenem\\*
-při naší zteči.\\*
-při naší zteči.
-\end{altverse}
+/:Co jste to za vojsko,:/\\*
+/:když místo střílení:/\\*
+/:do svých nepřátel:/\\*
+/:házíte kamení.:/
 
-\begin{altverse}
-Co jste to za vojsko,\\*
-Co jste to za vojsko,\\*
-když místo střílení\\*
-když místo střílení\\*
-do svých nepřátel\\*
-do svých nepřátel\\*
-házíte kamení.\\*
-házíte kamení.
-\end{altverse}
+/:Na to my nehrajem,:/\\*
+/:vy nám to kazíte,:/\\*
+/:nedbáte pravidel,:/\\*
+/:A pak se divíte!:/
 
-\begin{altverse}
-Na to my nehrajem,\\*
-Na to my nehrajem,\\*
-vy nám to kazíte,\\*
-vy nám to kazíte,\\*
-nedbáte pravidel,\\*
-nedbáte pravidel,\\*
-/:a pak se divíte!\\*
-A pak se divíte!/:
-\end{altverse}
+/:Na velkém plácku:/\\*
+/:hrají si dospělí,:/\\*
+/:jen místo dřevěných:/\\*
+/:hračky maj z oceli.:/
 
-\begin{altverse}
-Na velkém plácku\\*
-Na velkém plácku\\*
-hrají si dospělí,\\*
-hrají si dospělí,\\*
-jen místo dřevěných\\*
-jen místo dřevěných\\*
-hračky maj z oceli.\\*
-hračky maj z oceli.
-\end{altverse}
+/:Ocel se zarývá:/\\*
+/:do kůry stromů,:/\\*
+/:desítky jizviček:/\\*
+/:a blesky hromů.:/
 
-\begin{altverse}
-Ocel se zarývá\\*
-Ocel se zarývá\\*
-do kůry stromů,\\*
-do kůry stromů,\\*
-desítky jizviček\\*
-desítky jizviček\\*
-a blesky hromů.\\*
-a blesky hromů.
-\end{altverse}
+/:Některým na duši,:/\\*
+/:některým do těla:/\\*
+/:vpálí znamení,:/\\*
+/:proč nikdo nevolá?:/
 
-\begin{altverse}
-Některým na duši,\\*
-Některým na duši,\\*
-některým do těla\\*
-některým do těla\\*
-vpálí znamení,\\*
-vpálí znamení,\\*
-proč nikdo nevolá?\\*
-proč nikdo nevolá?
-\end{altverse}
-
-\begin{altverse}
-Zastavte válku\\*
-Zastavte válku\\*
-Maruška brečí,\\*
-Maruška brečí,\\*
-dostala kamenem\\*
-dostala kamenem\\*
-při naší zteči.\\*
-při naší zteči.
-\end{altverse}
-
-\begin{altverse}
-Co jste to za vojsko,\\*
-Co jste to za vojsko,\\*
-když místo střílení\\*
-když místo střílení\\*
-do svých nepřátel\\*
-do svých nepřátel\\*
-házíte kamení.\\*
-házíte kamení.
-\end{altverse}
-
-\begin{altverse}
-Na to my nehrajem,\\*
-Na to my nehrajem,\\*
-vy nám to kazíte,\\*
-vy nám to kazíte,\\*
-nedbáte pravidel,\\*
-nedbáte pravidel,\\*
-/:a pak se divíte!\\*
-A pak se divíte!/:
-\end{altverse}
+Ref.
 
 \end{poem}
 
@@ -1389,43 +1185,25 @@ svítí měsíc
 
 \settowidth{\versewidth}{hned na hrob padla a viac něvstala}
 
-Mezi horami\\*
-lipka zelená,\\*
-mezi horami\\*
-lipka zelená,\\*
-zabili Janka, Janíčka, Janka\\*
-miesto jeleňa,\\*
-zabili Janka, Janíčka, Janka\\*
-miesto jeleňa.
+/:Mezi horami\\*
+lipka zelená,:/\\*
+/:zabili Janka, Janíčka, Janka\\*
+miesto jeleňa.:/
 
-Keď ho zabili,\\*
-zamordovali,\\*
-keď ho zabili,\\*
-zamordovali,\\*
-na jeho hrobě, na jeho hrobě\\*
-kříž postavili,\\*
-na jeho hrobě, na jeho hrobě\\*
-kříž postavili.
+/:Keď ho zabili,\\*
+zamordovali,:/\\*
+/:na jeho hrobě, na jeho hrobě\\*
+kříž postavili.:/
 
-Ej křížu, křížu\\*
-ukřižovaný,\\*
-ej křížu, křížu\\*
-ukřižovaný,\\*
-zde leží Janík, Janíček, Janík,\\*
-zamordovaný,\\*
-zde leží Janík, Janíček, Janík,\\*
-zamordovaný.
+/:Ej křížu, křížu\\*
+ukřižovaný,:/\\*
+/:zde leží Janík, Janíček, Janík,\\*
+zamordovaný.:/
 
-\vfill\eject
-
-Tu šla Anička\\*
-plakat Janíčka,\\*
-tu šla Anička\\*
-plakat Janíčka,\\*
-hned na hrob padla a viac něvstala\\*
-dobrá Anička,\\*
-hned na hrob padla a viac něvstala\\*
-dobrá Anička.
+/:Tu šla Anička\\*
+plakat Janíčka,:/\\*
+/:hned na hrob padla a viac něvstala\\*
+dobrá Anička.:/
 
 Mezi horami... 
 \end{poem}
@@ -1474,9 +1252,10 @@ potkat je v noci ve městě, možná byste se báli.\\*
 Středověký škorně a staletou halenu,\\*
 do copánků spletený vlasy barvy havranů.
 
+Ref.:\\*
 Bylo nebylo, bylo nebylo,\\*
 bylo nebylo a bylo nebylo.\\*
-A bylo. \\*
+\tab A bylo. \\*
 Bylo nebylo, bylo nebylo,\\*
 bylo nebylo a bylo nebylo.
 
@@ -1485,55 +1264,35 @@ a tou kouzelnou muzikou štěstí rozdávali.\\*
 Pak ten okamžik skončil a nikdo nechtěl domů,\\*
 atmosféra, kdo tam nebyl, nevěřil by tomu.
 
-Bylo nebylo, bylo nebylo,\\*
-bylo nebylo a bylo nebylo.\\*
-A bylo. \\*
-Bylo nebylo, bylo nebylo,\\*
-bylo nebylo a bylo nebylo.
+Ref.
 
 Bylo nebylo, uplynul ňákej čas\\*
 a plakáty na nárožích visely tu zas.\\*
 Lidi zachvátila horečka a každý tam chtěl jít,\\*
 bez rozdílu názorů zas to kouzlo prožít.
 
-Bylo nebylo, bylo nebylo,\\*
-bylo nebylo a bylo nebylo.\\*
-A bylo. \\*
-Bylo nebylo, bylo nebylo,\\*
-bylo nebylo a bylo nebylo.
+Ref.
 
 Bylo nebylo, prošly divný zprávy,\\*
 že vyšlehnou hranice pro čerty a ďábly.\\*
 Do datumu na plakátech chybělo pár dní\\*
 a na radnici Krysaře zvou si páni radní.
 
-Bylo nebylo, bylo nebylo,\\*
-bylo nebylo a bylo nebylo.\\*
-Nebylo. \\*
-Bylo nebylo (nebylo), bylo nebylo,\\*
-bylo nebylo a bylo nebylo.
+Ref.
 
 Bylo nebylo, řekli, to by teda nešlo,\\*
 s touhle vaší vizáží hrát budete tu těžko!\\*
 Nás to vůbec nezajímá, že vás mají lidi rádi,\\*
 my jsme tady od toho jejich mysl chránit!
 
-Bylo nebylo, bylo nebylo,\\*
-bylo nebylo a bylo nebylo.\\*
-Nebylo. \\*
-Bylo nebylo (nebylo), bylo nebylo,\\*
-bylo nebylo a bylo nebylo.
+Ref.
 
 Bylo nebylo, jako v tý pohádce,\\*
 Krysař město opouští a hudba zní v dálce.\\*
 Jak za kouzelnou píšťalou za ním myšlenky táhnou\\*
 a hodně dlouho v tomhle městě byl cítit vzduch křivdou.
 
-Bylo nebylo a bylo nebylo,\\*
-bylo nebylo a bylo nebylo.\\*
-Nebylo. \\*
-Bylo nebylo (nebylo), bylo nebylo,\\*
-bylo nebylo a bylo nebylo.
+Ref.
 \end{poem}
 
 \begin{poem}{Anděl}{Karel Kryl}
@@ -1603,42 +1362,32 @@ a nemine.
 
 \settowidth{\versewidth}{v bělostných šatech pro nemocné,}
 
-Ztrácíš se před očima\\*
+/:Ztrácíš se před očima\\*
 rosteš jen ve vlastním stínu.\\*
 Každá další vina\\*
-odkrývá moji vinu.
+odkrývá moji vinu.:/
 
-Ztrácíš se před očima,\\*
-rosteš jen ve vlastním stínu.\\*
-Každá další vina\\*
-odkrývá moji vinu.
-
+\begin{altverse}
+Ve vínu dávno nic nehledám, \\*
+(Ve vínu dávno nic nehledám) \\*
+\end{altverse}
+nehledám.\\*
 \begin{altverse}
 Ve vínu dávno nic nehledám, \\*
 (Ve vínu dávno nic nehledám) \\*
 nehledám.
 \end{altverse}
-\begin{altverse}
-Ve vínu dávno nic nehledám, \\*
-(Ve vínu dávno nic nehledám) \\*
-nehledám.
-\end{altverse}
 
-Jak luna mizí s nocí\\*
+/:Jak luna mizí s nocí\\*
 v bělostných šatech pro nemocné,\\*
 prosit je zvláštní pocit,\\*
-jen, ať je den, noc ne.
-
-Jak luna mizí s nocí\\*
-v milostných šatech pro nemocné,\\*
-prosit je zvláštní pocit,\\*
-jen, ať je den, noc ne.
+jen, ať je den, noc ne.:/
 
 \begin{altverse}
 Od proseb dávno nic nečekám, \\*
 (Od proseb dávno nic nečekám) \\*
-nečekám.
 \end{altverse}
+nečekám.\\*
 \begin{altverse}
 Od proseb dávno nic nečekám, \\*
 (Od proseb dávno nic nečekám) \\*
@@ -1658,23 +1407,18 @@ jiným tulákům svítíš.
 \begin{altverse}
 Ve vínu dávno nic nehledám, \\*
 (Ve vínu dávno nic nehledám) \\*
-nehledám.
 \end{altverse}
+nehledám.\\*
 \begin{altverse}
 Ve vínu dávno nic nehledám, \\*
 (Ve vínu dávno nic nehledám) \\*
 nehledám.
 \end{altverse}
 
-Jak luna mizí s nocí\\*
+/:Jak luna mizí s nocí\\*
 v bělostných šatech pro nemocné,\\*
 prosit je zvláštní pocit,\\*
-jen, ať je den, noc ne.
-
-Jak luna mizí s nocí\\*
-v milostných šatech pro nemocné,\\*
-prosit je zvláštní pocit,\\*
-jen, ať je den, noc ne.
+jen, ať je den, noc ne.:/
 
 Obzor než klesne níž, \\*
 je ráno a ty spíš.\\*
@@ -1941,6 +1685,7 @@ Looking at life through the eyes of a tired hub\\*
 Eating seeds as a pastime activity\\*
 The toxicity of our city, our city
 
+Ref.:\\*
 You, what do you own the world?\\*
 How do you own disorder, disorder\\*
 Now somewhere between the sacred silence\\*
@@ -1953,19 +1698,9 @@ Flashlight reveries caught in the headlights of a truck\\*
 Eating seeds as a pastime activity\\*
 The toxicity of our city, of our city
 
-Now, what do you own the world?\\*
-How do you own disorder, disorder\\*
-Now somewhere between the sacred silence\\*
-Sacred silence and sleep\\*
-Somewhere between the sacred silence and sleep\\*
-Disorder, disorder, disorder
+Ref.
 
-You, what do you own the world?\\*
-How do you own disorder, disorder\\*
-Now somewhere between the sacred silence\\*
-Sacred silence and sleep\\*
-Somewhere, between the sacred silence and sleep\\*
-Disorder, disorder, disorder
+Ref.
 
 When I became the sun\\*
 I shone life into the man's hearts\\*
@@ -2036,7 +1771,7 @@ Still I don’t believe in angels
 
 \end{poem}
 
-\begin{poem}{Drunken Sailor}{Lidová}
+\begin{poem}{Drunken Sailor}{lidová}
 
 \settowidth{\versewidth}{Put him in the bed with the captains daughter,}
 
@@ -2107,7 +1842,7 @@ early in the morning!
 
 \end{poem}
 
-\begin{poem}{Old Maui}{Lidová}
+\begin{poem}{Old Maui}{lidová}
 
 \settowidth{\versewidth}{Cause we're homeward bound from the Arctic ground}
 
@@ -2174,7 +1909,7 @@ Rolling down to Old Maui
 
 \end{poem}
 
-\begin{poem}{Roll the Woodpile Down}{Lidová}
+\begin{poem}{Roll the Woodpile Down}{lidová}
 
 \settowidth{\versewidth}{Rollin', rollin', rollin' the whole world 'round}
 
@@ -2227,7 +1962,7 @@ And we'll roll the woodpile down
 
 \end{poem}
 
-\begin{poem}{Rocky Road to Dublin}{Lidová}
+\begin{poem}{Rocky Road to Dublin}{lidová}
 
 \settowidth{\versewidth}{And I have frightened all the dogs on the rocky road
 to Dublin,}
@@ -2242,6 +1977,7 @@ In a bran' new pair of brogues I rattled o'er the bogs\\*
 And frightened all the dogs on the rocky road to Dublin,\\*
 One, two, three, four, five. 
 
+Ref.:\\*
 Hunt the hare and turn her\\*
 Down the rocky road, and all the ways to Dublin\\*
 Whack fol-lol-de-ra.
@@ -2256,9 +1992,7 @@ They ax'd if I was hired, the wages I required,\\*
 Till I was almost tired of the rocky road to Dublin.\\*
 One, two, three, four, five. 
 
-Hunt the hare and turn her\\*
-Down the rocky road, and all the ways to Dublin\\*
-Whack fol-lol-de-ra.
+Ref.
 
 In Dublin next arrived, I thought it such a pity,\\*
 To be so soon deprived a view of that fine city,\\*
@@ -2270,9 +2004,7 @@ Enquiring for the rogue, they said my Connaught brogue\\*
 Wasn't much in vogue on the rocky road to Dublin.\\*
 One, two, three, four, five. 
 
-Hunt the hare and turn her\\*
-Down the rocky roaad, and all the ways to Dublin\\*
-Whack fol-lol-de-ra.
+Ref.
 
 From there I got away my spirits never failing,\\*
 Landed on the quay as the ship was sailing,\\*
@@ -2284,9 +2016,7 @@ When off to Holyhead I wished myself was dead,\\*
 Or better far, instead, on the rocky road to Dublin.\\*
 One, two, three, four, five. 
 
-Hunt the hare and turn her\\*
-Down the rocky roaad, and all the ways to Dublin\\*
-Whack fol-lol-de-ra.
+Ref.
 
 The boys of Liverpool, when we safely landed,\\*
 Called myself a fool, I could no longer stand it;\\*
@@ -2298,9 +2028,7 @@ Then with a loud Hurrah, they joined in the affray,\\*
 We quickly cleared the way, for the rocky road to Dublin.\\*
 One, two, three, four, five. 
 
-Hunt the hare and turn her\\*
-Down the rocky road, and all the ways to Dublin\\*
-Whack fol-lol-de-ra.
+Ref.
 
 \end{poem}
 
