--- a/songbook.tex
+++ b/songbook.tex
@@ -876,7 +876,7 @@ Ref.
 
 Bylo nebylo, řekli, to by teda nešlo,\\*
 s touhle vaší vizáží hrát budete tu těžko!\\*
-Nás to vůbec nezajímá, že vás mají lidi rádi,\\*
+Nás vůbec nezajímá, že vás mají lidi rádi,\\*
 my jsme tady od toho jejich mysl chránit!
 
 Ref.
@@ -1102,6 +1102,63 @@ svítí měsíc
 
 měsíc\\*
 svítí měsíc
+
+\end{poem}
+
+\begin{poem}{Obluda}{Hop Trop}
+
+\settowidth{\versewidth}{křik' plavčík na stožáru, a hlásek se mu třás'}
+
+Jó, dvěstě nás tam bylo na brize do Číny\\*
+a furt se jenom pilo, až tuhly ledviny,\\*
+a když už bylo k ránu a všichni pod vobraz,\\*
+křik' plavčík na stožáru, a hlásek se mu třás':
+
+Já tady nebudu, já vidím vobludu,\\*
+já vocaď pryč pudu, jímá mě strach,\\*
+chyťte tu vobludu, sežere palubu,\\*
+tohle je vo hubu, ach, ich, och, ach.
+
+Má vocas dvěstě sáhů a ploutev přes hektar\\*
+a zubů plnou hubu, a rozcvičuje spár\\*
+a rozčileně mrká svým vokem jediným,\\*
+a páchne, řve a krká a z tlamy pouští dým.
+
+Já tady nebudu, já vidím vobludu,\\*
+já vocaď pryč pudu, jímá mě strach,\\*
+chyťte tu vobludu, sežere palubu,\\*
+tohle je vo hubu, ach, ich, och, ach.
+
+Rum kapitánem hází, chce pálit z kanónu,\\*
+zapomněl, že ho v září prochlastal v Kantonu,\\*
+když uviděl tu bídu, hned zpotil se jak myš,\\*
+poklekl k komínu, pěl: K tobě, Bože, blíž.
+
+Já tady nebudu, já vidím vobludu,\\*
+já vocaď pryč pudu, jímá mě strach,\\*
+chyťte tu vobludu, sežere palubu,\\*
+tohle je vo hubu, ach, ich, och, ach.
+
+Náš kormidelník chrabrý je drsná povaha,\\*
+zalehl u zábradlí a házel flaškama,\\*
+když na vobludě bouchl kanystr vod ginu,\\*
+tu přízrak vztekle houkl a vlítl na brigu.
+
+Já tady nebudu, já vidím vobludu,\\*
+já vocaď pryč pudu, jímá mě strach,\\*
+chyťte tu vobludu, sežere palubu,\\*
+tohle je vo hubu, ach, ich, och, ach.
+
+Tři stěžně rozlámala na naší kocábce,\\*
+však ztuhla jako skála, když čuchla k posádce,\\*
+pak démon alkoholu ji srazil v oceán,\\*
+my slezli zase dolů a chlastali jsme dál.
+
+Já tady nebudu, já vidím vobludu,\\*
+já vocaď pryč pudu, jímá mě strach,\\*
+chyťte tu vobludu, sežere palubu,\\*
+tohle je vo hubu, ach, ich, och, ach.\\*
+ach, ich, och, ach ...
 
 \end{poem}
 
