--- a/songbook.tex
+++ b/songbook.tex
@@ -293,6 +293,44 @@ Olé olé olé policie!
 
 \end{poem}
 
+\begin{poem}{Batalion}{Spirituál kvintet}
+
+\settowidth{\versewidth}{Víno na kuráž a k ránu dvě hodinky spánku,}
+
+Víno máš a markytánku,\\*
+dlouhá noc se prohýří.\\*
+Víno máš a chvilku spánku,\\*
+díky, díky verbíři.
+
+Dříve než se rozední,\\*
+kapitán k osedlání rozkaz dává,\\*
+ostruhami do slabin koně pohání.\\*
+Tam na straně polední,\\*
+čekají ženy, zlaťáky a sláva,\\*
+do výstřelů z karabin zvon už vyzvání..
+
+Ref.:\\*
+Víno na kuráž a pomilovat markytánku,\\*
+zítra do Burgund Batalion zamíří.\\*
+Víno na kuráž a k ránu dvě hodinky spánku,\\*
+díky, díky Vám královští verbíři.
+
+Rozprášen je Batalion,\\*
+poslední vojáci se k zemi hroutí,\\*
+na polštáři z kopretin budou věčně spát.\\*
+Neplač sladká Marion,\\*
+verbíři nové chlapce přivedou ti,\\*
+za královský hermelín padne každý rád.
+
+Ref.
+
+Víno máš a markytánku,\\*
+dlouhá noc se prohýří.\\*
+Víno máš a chvilku spánku,\\*
+díky, díky verbíři...
+
+\end{poem}
+
 \begin{poem}{Básnířka}{Jaromír Nohavica}
 
 \settowidth{\versewidth}{Pak jednou v pondělí, přišla na koncert na koleje}
