--- a/songbook.tex
+++ b/songbook.tex
@@ -1800,6 +1800,61 @@ early in the morning!
 
 \end{poem}
 
+\begin{poem}{Hallelujah}{Leonard Cohen}
+
+\settowidth{\versewidth}{Put him in the bed with the captains daughter,}
+
+Now I've heard there was a secret chord,\\*
+that David played, and it pleased the Lord,\\*
+but you don't really care for music, do you?\\*
+It goes like this, the fourth, the fifth,\\*
+the minor fall, the major lift,\\*
+the baffled king composing Hallelujah.
+
+Hallelujah, Hallelujah,\\*
+Hallelujah, Hallelujah.
+
+Your faith was strong but you needed proof,\\*
+you saw her bathing on the roof,\\*
+her beauty and the moonlight overthrew you.\\*
+She tied you to a kitchen chair,\\*
+she broke your throne, and she cut your hair\\*
+and from your lips she drew the Hallelujah.
+
+Hallelujah, Hallelujah,\\*
+Hallelujah, Hallelujah.
+
+You say I took the name in vain,\\*
+I don't even know the name,\\*
+But if I did—well, really—what's it to you?\\*
+There's a blaze of light in every word,\\*
+It doesn't matter which you heard,\\*
+the holy or the broken Hallelujah.
+
+Hallelujah, Hallelujah,\\*
+Hallelujah, Hallelujah.
+
+I did my best, it wasn't much,\\*
+I couldn't feel, so I tried to touch,,\\*
+I've told the truth, I didn't come to fool you.\\*
+And even though it all went wrong,\\*
+I'll stand before the Lord of Song,\\*
+with nothing on my tongue but Hallelujah.
+
+Hallelujah, Hallelujah,\\*
+Hallelujah, Hallelujah.
+
+Hallelujah, Hallelujah,\\*
+Hallelujah, Hallelujah.
+
+Hallelujah, Hallelujah,\\*
+Hallelujah, Hallelujah.
+
+Hallelujah, Hallelujah,\\*
+Hallelujah, Hallelujah.
+
+\end{poem}
+
 \begin{poem}{Jack of Hands}{Edward Ka-Spel}
 
 \settowidth{\versewidth}{He’s free to tread and lift the sheets}
@@ -2093,6 +2148,64 @@ That brown gal of mine's on the Georgia line\\*
 And we'll roll the woodpile down\\*
 That brown gal of mine's on the Georgia line\\*
 And we'll roll the woodpile down
+
+\end{poem}
+
+\begin{poem}{The Times They Are A-Changin'}{Bob Dylan}
+
+\settowidth{\versewidth}{Please get outta' the new one if you can’t lend your hand}
+
+Come gather 'round people\\*
+Wherever you roam\\*
+And admit that the waters\\*
+Around you have grown\\*
+And accept it that soon\\*
+You’ll be drenched to the bone\\*
+If your time to you is worth saving\\*
+Then you better start swimmin' or you’ll sink like a~stone\\*
+For the times they are a-changin'.
+
+Come writers and critics\\*
+Who prophesize with your pen\\*
+And keep your eyes wide\\*
+The chance won’t come again\\*
+And don’t speak too soon\\*
+For the wheel’s still in spin\\*
+And there’s no tellin' who that it’s namin'\\*
+For the loser now will be later to win\\*
+For the times they are a-changin'.
+
+\vfill\eject
+
+Come mothers and fathers\\*
+Throughout the land\\*
+And don’t criticize\\*
+What you can’t understand\\*
+Your sons and your daughters\\*
+Are beyond your command\\*
+Your old road is rapidly agein'\\*
+Please get outta' the new one if you can’t lend your hand\\*
+For the times they are a-changin'.
+
+Come senators, congressmen\\*
+Please heed the call\\*
+Don’t stand in the doorway\\*
+Don’t block up the hall\\*
+For he that gets hurt\\*
+Will be he who has stalled\\*
+The battle outside ragin'\\*
+Will soon shake your windows and rattle your walls\\*
+For the times they are a-changin'.
+
+The line it is drawn\\*
+The curse it is cast\\*
+The slow one now\\*
+Will later be fast\\*
+As the present now\\*
+Will later be past\\*
+The order is rapidly fading\\*
+And the first one now will later be last\\*
+For the times they are a-changin'.
 
 \end{poem}
 
